# AetherAim

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build_pico_firmware.yml
assets/: app.rc  default_config.json
docs/: BUILDING.md  GETTING_STARTED.md
pico_firmware/: CMakeLists.txt  README.md  SHOPPING_LIST.md  pico_sdk_import.cmake
pico_firmware/src/: main.cpp  one_euro_filter.hpp  serial_console.hpp
src/: CMakeLists.txt  main.cpp  tusb_config.h
src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  GlobalAppConfig.hpp  ProfileData.hpp  ProfileManager.cpp  ProfileManager.hpp
src/core/: CMakeLists.txt  EMAFilter.hpp  InputProcessor.cpp  InputProcessor.hpp  KalmanFilter.hpp  MouseHookManager.cpp  MouseHookManager.hpp  OneEuroFilter.cpp  OneEuroFilter.hpp
src/gui/: CMakeLists.txt  CalibrationWizard.cpp  CalibrationWizard.hpp  GUIApp.cpp  GUIApp.hpp  Widgets.cpp  Widgets.hpp
src/hook/: AetherAimHook.cpp  SharedMemory.hpp
src/injector/: GameInjector.cpp  GameInjector.hpp
src/utils/: CMakeLists.txt  HotkeyManager.cpp  HotkeyManager.hpp  Logger.cpp  Logger.hpp  MathUtils.hpp  SystemTray.cpp  SystemTray.hpp
tests/: CMakeLists.txt  benchmark_main.cpp  test_config.cpp  test_filters.cpp  test_profile.cpp  test_ringbuffer.cpp
